--- a/config/machines/lumi/catalog.yaml
+++ b/config/machines/lumi/catalog.yaml
@@ -36,3 +36,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: "{{CATALOG_DIR}}/catalog/CERES/main.yaml"
+  OSI-SAF:
+    description: OSI-SAF sea-ice data
+    driver: yaml_file_cat
+    args:
+      path: "{{CATALOG_DIR}}/catalog/OSI-SAF/main.yaml"
