default var read from catalog entry

--- a/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
+++ b/config/machines/lumi/catalog/IFS/historical-1990-devcon.yaml
@@ -9,7 +9,7 @@ sources:
         stream: lwda
         date: 19900101
         time: "0000"
-        param: 167
+        param: 2t
         levtype: sfc
         step: 0
       data_start_date: "19900101:0000"
@@ -30,7 +30,7 @@ sources:
         stream: scda
         date: 19900101
         time: "0000"
-        param: 144
+        param: sf
         levtype: sfc
         step: 0
       data_start_date: "19900101:0000"
@@ -51,7 +51,7 @@ sources:
         stream: scwv
         date: 19900101
         time: "0000"
-        param: 129 # geopotential
+        param: z
         levtype: pl
         levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
         step: 6  # First available step
