--- a/config/machines/levante/regrid.yaml
+++ b/config/machines/levante/regrid.yaml
@@ -456,7 +456,8 @@ source_grids:
   WOA18:
     woa18_2005_2017:
       default:
-        # path: /pool/data/AWICM/FESOM2/INITIAL/WOA18/WOA18_2005_2017/woa18_A5B7_t00_04.nc
+        path:
+          depth: /work/bb1153/b382076/AQUA-archive/grids/WOA18/grid-woa18.nc
         vert_coord: depth
         space_coord: ["lon", "lat"]
 
