--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -1,14 +1,17 @@
 weights:
-   path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/weights
-   template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
+  path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/weights
+  template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
 
 areas:
-   path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/areas
-   src_template: cell_area_{model}_{exp}_{source}.nc
-   dst_template: cell_area_{grid}.nc
+  path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/areas
+  src_template: cell_area_{model}_{exp}_{source}.nc
+  dst_template: cell_area_{grid}.nc
+
+paths:
+  grids: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids
 
 cdo-paths:
-  download: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids
+  download: $grids
   icon: /pool/data/ICON #WRONG
 
 target_grids:
@@ -35,20 +38,20 @@ source_grids:
   IFS:
     tco399-orca025:
       default:
-        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/IFS/tco399_grid.nc
+        path: $grids/IFS/tco399_grid.nc
         space_coord: ["value"]
     tco79-eORCA1:
       atm2d:
-        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/IFS/tco79_grid.nc
+        path: $grids/IFS/tco79_grid.nc
         space_coord: ["value"]
       atm3d:
-        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/IFS/tco79_grid.nc
+        path: $grids/IFS/tco79_grid.nc
         space_coord: ["value"]
     fdb-tco399:
       default:
         path: 
-          2d: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/IFS/tco399_grid.nc
-          2dm: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/IFS/tco399_grid_masked.nc
+          2d: $grids/IFS/tco399_grid.nc
+          2dm: $grids/IFS/tco399_grid_masked.nc
         masked_vars:
           - ci
           - sst
@@ -85,8 +88,8 @@ source_grids:
     era5:
       default:
         path: 
-          2d: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/lonlat/r025_grid.nc
-          2dm: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/lonlat/r025_grid_masked.nc
+          2d: $grids/lonlat/r025_grid.nc
+          2dm: $grids/lonlat/r025_grid_masked.nc
         masked_vars:
           - sst
           - SSTK
@@ -95,7 +98,7 @@ source_grids:
   NEMO:
     tco79-eORCA1:
       default:
-        path: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/NEMO/ORCA1_mesh_sfc_grid_T.nc
+        path: $grids/NEMO/ORCA1_mesh_sfc_grid_T.nc
         space_coord: ["cell"]
         # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
         # extra:
@@ -141,40 +144,40 @@ source_grids:
         space_coord:
         - xc
         - yc
-        cellareas: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_nh.nc
+        cellareas: $grids/OSI-SAF/grid_nh.nc
         cellarea_var: areacello
-        mask: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_nh.nc
+        mask: $grids/OSI-SAF/grid_nh.nc
         mask_var: sftof
       nh-daily:
         space_coord:
         - xc
         - yc
-        cellareas: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_nh.nc
+        cellareas: $grids/OSI-SAF/grid_nh.nc
         cellarea_var: areacello
-        mask: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_nh.nc
+        mask: $grids/OSI-SAF/grid_nh.nc
         mask_var: sftof
       sh-daily:
         space_coord:
         - xc
         - yc
-        cellareas: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_sh.nc
+        cellareas: $grids/OSI-SAF/grid_sh.nc
         cellarea_var: areacello
-        mask: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_nh.nc
+        mask: $grids/OSI-SAF/grid_nh.nc
         mask_var: sftof
       sh-monthly:
         space_coord:
         - xc
         - yc
-        cellareas: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_sh.nc
+        cellareas: $grids/OSI-SAF/grid_sh.nc
         cellarea_var: areacello
-        mask: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/OSI-SAF/grid_nh.nc
+        mask: $grids/OSI-SAF/grid_nh.nc
         mask_var: sftof
 
   EN4:
     en4:
       default:
         path:
-          lev: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/EN4/en4-grid.nc
+          lev: $grids/EN4/en4-grid.nc
         space_coord: ["lon", "lat"]
         vert_coord: ["lev"]
 
@@ -194,6 +197,6 @@ source_grids:
     woa18_2005_2017:
       default:
         path:
-          depth: /pfs/lustrep3/projappl/project_465000454/data/AQUA/grids/WOA18/grid-woa18.nc
+          depth: $grids/WOA18/grid-woa18.nc
         vert_coord: depth
         space_coord: ["lon", "lat"]
