--- a/config/fixes/ERA5.yaml
+++ b/config/fixes/ERA5.yaml
@@ -22,6 +22,8 @@ models:
                     tcc: 
                         grib: true 
                         source: TCC
+                        src_units: (0 - 1)
+                        units: (0 - 1)
                     sst:
                         grib: true
                         source: SSTK
