updated list of variables

--- a/diagnostics/global_time_series/cli/config_time_series_control_run.yaml
+++ b/diagnostics/global_time_series/cli/config_time_series_control_run.yaml
@@ -3,6 +3,7 @@ timeseries:
 # and the savefig name
     variables:
         - "2t"
+        - "erate"
         - "tprate"
         - "tcc"
     sources:
