--- a/config/machines/lumi/catalog.yaml
+++ b/config/machines/lumi/catalog.yaml
@@ -46,3 +46,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: "{{CATALOG_DIR}}/catalog/EN4/main.yaml"
+  AVISO:
+    description: AVISO SSH data
+    driver: yaml_file_cat
+    args:
+      path: "{{CATALOG_DIR}}/catalog/AVISO/main.yaml"
