--- a/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
+++ b/config/machines/lumi/catalog/IFS/fdb-tco399.yaml
@@ -15,7 +15,8 @@ sources:
         step: 0
       data_start_date: 20200120
       data_end_date: 20210101
-      aggregation: S
+      aggregation: D
+      savefreq: H
       timestep: H
       timestyle: step
     description: 'FDB data tco399 grid'
