--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -85,6 +85,9 @@ source_grids:
         space_coord: ["lon", "lat"]
 
   ERA5:
+    fdb:
+      default:
+        space_coord: ["lon", "lat"]
     era5:
       default:
         path: 
