--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -84,95 +84,20 @@ models:
                         source: smlt
                         grib: true
                         decumulate: true
-        fdb-tco399:   # fdb-long test archive
-            default:
-                data_model: ifs
-                deltat: 3600
-                jump: month
-                vars:
-                    tprate:
-                        source: tp
+                    iews:
+                        source: ewss
                         grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    cprate:
-                        source: cp
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mlsprt:
-                        source: lsp
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    erate:
-                        source: e
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    esrate:
-                        source: es
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mrort:
-                        source: ro
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mtsfr:
-                        source: sf
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mslhfl:
-                        source: slhf
-                        grib: true
-                        decumulate: true
-                    msshfl:
-                        source: sshf
-                        grib: true
-                        decumulate: true
-                    msnsrf:
-                        source: ssr
-                        grib: true
-                        decumulate: true
-                    msdsrf:
-                        source: ssrd
-                        grib: true
-                        decumulate: true    
-                    msntrf:
-                        source: str
-                        grib: true
-                        decumulate: true
-                    msdtrf:
-                        source: strd
-                        grib: true
-                        decumulate: true
-                    mtnsrf:
-                        source: tsr
-                        grib: true
-                        decumulate: true
-                    mtntrf:
-                        source: ttr
-                        grib: true
-                        decumulate: true         
-                    var172045:  # if the variable has no short name we can use its paramId
-                        source: smlt
+                        decumulate: true  
+                    inss: 
+                        source: nsss
                         grib: true
                         decumulate: true
         tco2559-ng5-cycle3:
-         # for this exp we have a lot of output from MultI/O, already decumulated and
-         # averaged monthly, so default is without decumulation
+        # for this exp we have a lot of output from MultI/O, already decumulated and
+        # averaged monthly, so default is without decumulation
             default:
                 data_model: ifs
+                method: replace
                 vars:
                     tprate:
                         src_units: m s**-1
@@ -242,76 +167,7 @@ models:
                         source: ttr
                         grib: true  
             2D_1h_native: 
-                data_model: ifs
-                deltat: 3600
-                jump: month
-                vars:
-                    tprate:
-                        source: tp
-                        grib: true
-                        decumulate: true 
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    erate:
-                        source: e
-                        grib: true
-                        decumulate: true 
-                        src_units: m
-                        units: kg m**-2 s**-1 
-                    esrate:
-                        source: es
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mrort:
-                        source: ro
-                        grib: true
-                        decumulate: true
-                        src_units: m 
-                        units: kg m**-2 s**-1
-                    mtsfr:
-                        source: sf
-                        grib: true
-                        decumulate: true
-                        src_units: m 
-                        units: kg m**-2 s**-1
-                    mslhfl:
-                        source: slhf
-                        grib: true
-                        decumulate: true
-                    msshfl:
-                        source: sshf
-                        grib: true
-                        decumulate: true
-                    msnsrf:
-                        source: ssr
-                        grib: true
-                        decumulate: true
-                    msdsrf:
-                        source: ssrd
-                        grib: true
-                        decumulate: true    
-                    msntrf:
-                        source: str
-                        grib: true
-                        decumulate: true
-                    msdtrf:
-                        source: strd
-                        grib: true
-                        decumulate: true
-                    mtnsrf:
-                        source: tsr
-                        grib: true
-                        decumulate: true
-                    mtntrf:
-                        source: ttr
-                        grib: true
-                        decumulate: true         
-                    var172045:  # if the variable has no short name we can use its paramId
-                        source: smlt
-                        grib: true
-                        decumulate: true     
+                method: default    
         tco1279-orca025-cycle3:
          # for this exp we have a lot of output from MultI/O, already decumulated and
          # averaged monthly, so default is without decumulation
@@ -386,157 +242,16 @@ models:
                         source: ttr
                         grib: true  
             2D_1h_native: 
-                data_model: ifs
-                deltat: 3600
-                jump: month
-                vars:
-                    tprate:
-                        source: tp
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    cprate:
-                        source: cp
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mlsprt:
-                        source: lsp
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1 
-                    erate:
-                        source: e
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1 
-                    esrate:
-                        source: es
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1 
-                    mrort:
-                        source: ro
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mtsfr:
-                        source: sf
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mslhfl:
-                        source: slhf
-                        grib: true
-                        decumulate: true
-                    msshfl:
-                        source: sshf
-                        grib: true
-                        decumulate: true
-                    msnsrf:
-                        source: ssr
-                        grib: true
-                        decumulate: true
-                    msdsrf:
-                        source: ssrd
-                        grib: true
-                        decumulate: true    
-                    msntrf:
-                        source: str
-                        grib: true
-                        decumulate: true
-                    msdtrf:
-                        source: strd
-                        grib: true
-                        decumulate: true
-                    mtnsrf:
-                        source: tsr
-                        grib: true
-                        decumulate: true
-                    mtntrf:
-                        source: ttr
-                        grib: true
-                        decumulate: true         
-                    var172045:  # if the variable has no short name we can use its paramId
-                        source: smlt
-                        grib: true
-                        decumulate: true
-
+                method: default
         control-1950-devcon:
-            default:
-                data_model: ifs
             hourly-1deg:
+                method: merge
                 data_model: ifs
                 deltat: 3600
                 jump: month
                 vars:
                     tprate:
                         source: 260048
-                    cprate:
-                        source: cp
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    erate:
-                        source: 182
-                        grib: true
-                        decumulate: true
-                        #src_units: m
-                        units: kg m**-2 s**-1 #forced to be equal to tprate
-                    mtsfr:
-                        source: sf
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mslhfl:
-                        source: slhf
-                        grib: true
-                        decumulate: true
-                    msshfl:
-                        source: sshf
-                        grib: true
-                        decumulate: true
-                    msnsrf:
-                        source: ssr
-                        grib: true
-                        decumulate: true
-                    msdsrf:
-                        source: ssrd
-                        grib: true
-                        decumulate: true    
-                    msntrf:
-                        source: str
-                        grib: true
-                        decumulate: true
-                    msdtrf:
-                        source: strd
-                        grib: true
-                        decumulate: true
-                    mtnsrf:
-                        source: tsr
-                        grib: true
-                        decumulate: true
-                    mtntrf:
-                        source: ttr
-                        grib: true
-                        decumulate: true    
-                    iews:
-                        source: ewss
-                        grib: true
-                        decumulate: true  
-                    inss: 
-                        source: nsss
-                        grib: true
-                        decumulate: true
                     blh:
                         source: 159
                     chnk:
@@ -546,6 +261,7 @@ models:
                         grib: true
                         decumulate: true 
             hourly-native:
+                method: replace
                 data_model: ifs
                 vars:
                     tprate:
@@ -556,6 +272,7 @@ models:
                         source: 148          
             monthly-1deg-2d:
                 data_model: ifs
+                method: replace
                 vars:
                     tprate:
                         source: 260048
@@ -566,79 +283,21 @@ models:
                     hcc:
                         source: 188
             monthly-1deg-3d:
+                method: replace
                 data_model: ifs
                 vars:
                     q:
                         source: 133
 
         historical-1990-devcon:
-            default:
-                data_model: ifs
             hourly-1deg:
+                method: merge
                 data_model: ifs
                 deltat: 3600
                 jump: month
                 vars:
                     tprate:
-                        source: 260048
-                    cprate:
-                        source: cp
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    erate:
-                        source: 182
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mtsfr:
-                        source: sf
-                        grib: true
-                        decumulate: true
-                        src_units: m
-                        units: kg m**-2 s**-1
-                    mslhfl:
-                        source: slhf
-                        grib: true
-                        decumulate: true
-                    msshfl:
-                        source: sshf
-                        grib: true
-                        decumulate: true
-                    msnsrf:
-                        source: ssr
-                        grib: true
-                        decumulate: true
-                    msdsrf:
-                        source: ssrd
-                        grib: true
-                        decumulate: true    
-                    msntrf:
-                        source: str
-                        grib: true
-                        decumulate: true
-                    msdtrf:
-                        source: strd
-                        grib: true
-                        decumulate: true
-                    mtnsrf:
-                        source: tsr
-                        grib: true
-                        decumulate: true
-                    mtntrf:
-                        source: ttr
-                        grib: true
-                        decumulate: true    
-                    iews:
-                        source: ewss
-                        grib: true
-                        decumulate: true  
-                    inss: 
-                        source: nsss
-                        grib: true
-                        decumulate: true
+                        source: 260048 
                     blh:
                         source: 159
                     chnk:
@@ -676,6 +335,7 @@ models:
         # These are for tests
         test-tco79:
             long:
+                method: replace #replace #merge
                 data_model: ifs
                 deltat: 3600
                 jump: month
