--- a/config/machines/lumi/catalog/IFS/historical-1990-fesom.yaml
+++ b/config/machines/lumi/catalog/IFS/historical-1990-fesom.yaml
@@ -1,19 +1,20 @@
+# one month of data so far
 sources:
   hourly-native:
     args:
       request:
         domain: g
         class: rd
-        expver: a07p
+        expver: i2hm
         type: fc
         stream: lwda
         date: 19900101
-        time: "0000"
+        time: '0000'
         param: 2t
         levtype: sfc
         step: 0
       data_start_date: 19900101:0000
-      data_end_date: 19901231:2300
+      data_end_date: 19900131:2300
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -22,22 +23,22 @@ sources:
       sd(141), 2d(168), skt(235), chnk(148). See fix yaml for derived vars.
     driver: gsv
     metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+       /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml}
   hourly-1deg:
     args:
       request:
         domain: g
         class: rd
-        expver: a07p
+        expver: i2hm
         type: fc
         stream: scda
         date: 19900101
-        time: "0000"
+        time: '0000'
         param: sf
         levtype: sfc
         step: 0
       data_start_date: 19900101:0000
-      data_end_date: 19901231:2300
+      data_end_date: 19900131:2300
       aggregation: H  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -47,37 +48,37 @@ sources:
       yaml for derived vars.
     driver: gsv
     metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+        /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml}
   6hourly-1deg:
     args:
       request:
         domain: g
         class: rd
-        expver: a07p
+        expver: i2hm
         type: fc
         stream: scwv
         date: 19900101
-        time: "0000"
+        time: '0000'
         param: z
         levtype: pl
         levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
           700, 850, 925, 1000]
         step: 6  # First available step
-      data_start_date: 19500101:0000
-      data_end_date: 19591231:1800
+      data_start_date: 19900101:0000
+      data_end_date: 19900131:1800
       aggregation: 6H  # Default aggregation if timestep=S is used
       timestep: H  # What one step means
       timestyle: step
-    description: 6hourly data on r100 griddeg. Contains z(129).
+    description: 6hourly data on r100 grid. Contains z(129).
     driver: gsv
     metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+       /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml}
   monthly-1deg-2d:
     args:
       request:
         domain: g
         class: rd
-        expver: a07p
+        expver: i2hm
         type: fc
         stream: monr
         date: 19900101
@@ -86,7 +87,7 @@ sources:
         levtype: sfc
         step: 0
       data_start_date: '19900101'
-      data_end_date: '19901201'
+      data_end_date: '19591201'
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -95,13 +96,13 @@ sources:
       sd(141), tciw(79), tclw(78), msl(151), tcwv(137), lcc(186), mcc(187), hcc(188).
     driver: gsv
     metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+       /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml}
   monthly-1deg-3d:
     args:
       request:
         domain: g
         class: rd
-        expver: a07p
+        expver: i2hm
         type: fc
         stream: monr
         date: 19900101
@@ -112,7 +113,7 @@ sources:
           700, 850, 925, 1000]
         step: 0
       data_start_date: '19900101'
-      data_end_date: '19901201'
+      data_end_date: '19900131'
       aggregation: M  # Default aggregation if timestep=S is used
       timestep: H
       timestyle: step
@@ -121,4 +122,13 @@ sources:
       w(135), q(133).
     driver: gsv
     metadata: {fdb_path: 
-        /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-HISTORICAL_1990_DEVCON.yaml}
+       /pfs/lustrep3/scratch/project_465000454/sbeyer/raps_sbeyer/etc/fdb/config.yaml}
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: 
+        /pfs/lustrep3/projappl/project_465000454/padavini/LRA-dev/IFS/control-1990-devcon/r100/monthly/*control-1990-devcon_r100_monthly_????.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
