--- a/config/machines/lumi/regrid.yaml
+++ b/config/machines/lumi/regrid.yaml
@@ -96,10 +96,10 @@ source_grids:
         space_coord: ["lon", "lat"]
         vert_coord: ["2d", "2dm"]  # If the case is more complex than simply "2d" we need to specify this  
   NEMO:
-    tco79-eORCA1:
+    fdb-tco79-eorca1:
       default:
-        path: $grids/NEMO/ORCA1_mesh_sfc_grid_T.nc
-        space_coord: ["cell"]
+        path: $grids/NEMO/eORCA1_mesh_sfc_grid_T.nc
+        space_coord: ["ncells"]
         # path: /pfs/lustrep3/scratch/project_465000454/pool/data/IFS/inputs_de_48r1/nemo/V40/eORCA1_Z75/common/mesh_mask.nc
         # extra:
         #   - selname,tmask          
